# TCraft

./: '  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  massif.out.58808  set_texture_data.py  tasks.py  vcpkg.json
dep/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
resources/: default_world_settings.json  internal_settings.json  settings.json  settings_back.json
resources/data/: block.json  test_block_data_write.json
resources/data/block/: acacia_leaves.json  block_data.json  block_defaults.json  block_model_data.json  clay.json  cobblestone.json  default_block.json  diamond_ore.json  dirt.json  editor_texture_2d_array.json  full_grass.json  oak_leaves.json  plains_grass.json  sand.json  snow.json  stone.json  texture_2d_array.json  textures.json  water.json
resources/data/block/model/: plains_grass.json  water.json
resources/data/model/block/: acacia_leaves.json  clay.json  cobblestone.json  default.json  dirt.json  full_grass.json  oak_leaves.json  plains_grass.json  sand.json  snow.json  stone.json  water.json
resources/data/terrain/: default_terrain.json
resources/data/terrain/biomes/: plains.json  plains2.json  plains2_test.json  plains3.json  plains_test.json
resources/default_world/: data.json  level.json
resources/shaders/: block.fs.glsl  block.vs.glsl  block_outline.fs.glsl  block_outline.gs.glsl  block_outline.vs.glsl  chunk.fs.glsl  chunk.vs.glsl  chunk_batch.fs.glsl  chunk_batch.vs.glsl  chunk_batch_block.fs.glsl  chunk_batch_block.vs.glsl  chunk_batch_block_depth.vs.glsl  chunk_batch_depth.fs.glsl  chunk_batch_depth.vs.glsl  chunk_cull.cs.glsl  color.fs.glsl  color.vs.glsl  color_single.fs.glsl  color_single.vs.glsl  color_uniform.fs.glsl  common.glsl  debug_depth_quad.fs.glsl  debug_depth_quad.vs.glsl  lod_chunk_batch.fs.glsl  lod_chunk_batch.vs.glsl  lod_chunk_batch_depth.vs.glsl  non_batch.fs.glsl  non_batch.vs.glsl  non_batch_depth.vs.glsl  quad.fs.glsl  quad.vs.glsl  shadow.glsl  shadow_map_depth.gs.glsl  single_texture.fs.glsl  single_texture.vs.glsl  single_texture_array.fs.glsl  single_texture_array.vs.glsl  sky.fs.glsl  sky.vs.glsl  skybox.fs.glsl  (+1 more)
resources/shaders/shadows/: cascade_volume_vis.fs.glsl  cascade_volume_vis.vs.glsl
resources/textures/block/: acacia_leaves.xcf  oak_leaves.xcf  spruce_leaves.xcf
resources/worlds/default_world/: data.json  level.json
resources/worlds/minecraft/: data.json  level.json
src/: CMakeLists.txt  Constants.hpp  EAssert.cpp  EAssert.hpp  pch.hpp
src/application/: Application.cpp  Application.hpp  EventDispatcher.cpp  EventDispatcher.hpp  Input.hpp  InternalSettings.cpp  InternalSettings.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Settings.cpp  Settings.hpp  SettingsManager.cpp  SettingsManager.hpp  Window.cpp  Window.hpp  WorldManager.cpp  WorldManager.hpp  main.cpp
src/camera/: Camera.hpp  FPSCamera.cpp  FPSCamera.hpp  OrbitCamera.cpp  OrbitCamera.hpp
src/gameplay/: GamePlayer.cpp  GamePlayer.hpp  InventoryUI.cpp  InventoryUI.hpp  Player.cpp  Player.hpp  World.cpp  World.hpp  WorldScene.cpp  WorldScene.hpp
src/gameplay/scene/: BlockEditorScene.cpp  BlockEditorScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  ShadowScene.cpp  ShadowScene.hpp  WorldScene.cpp  WorldScene.hpp
src/gameplay/world/: Block.hpp  BlockDB.cpp  BlockDB.hpp  Chunk.cpp  Chunk.hpp  ChunkData.cpp  ChunkData.hpp  ChunkDef.hpp  ChunkHelpers.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkMeshInfo.hpp  ChunkUtil.cpp  ChunkUtil.hpp  Terrain.cpp  Terrain.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp  World.cpp  World.hpp
src/math/: AABB.hpp  Plane.hpp  Sphere.hpp
src/renderer/: ChunkMesh.cpp  ChunkMesh.hpp  ChunkMesher.cpp  ChunkMesher.hpp  ChunkRenderParams.hpp  Common.hpp  Constants.hpp  Cube.hpp  FPSCamera.cpp  FPSCamera.hpp  Frustum.cpp  Frustum.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderInfo.hpp  Renderer.cpp  Renderer.hpp  RendererUtil.cpp  RendererUtil.hpp  ShaderManager.cpp  ShaderManager.hpp  Shape.hpp  TextureAtlas.hpp  Vertex.hpp
src/renderer/opengl/: Buffer.cpp  Buffer.hpp  Debug.cpp  Debug.hpp  DynamicBuffer.cpp  DynamicBuffer.hpp  Shader.cpp  Shader.hpp  Texture2d.cpp  Texture2d.hpp  Texture2dArray.cpp  Texture2dArray.hpp  TextureCube.hpp  VertexArray.cpp  VertexArray.hpp
src/resource/: Image.hpp  MaterialManager.cpp  MaterialManager.hpp  Resource.hpp  ResourceLoader.cpp  ResourceLoader.hpp  TextureManager.cpp  TextureManager.hpp
src/ui/: Button.hpp  Constraint.hpp  UI.cpp  UI.hpp
src/util/: JsonUtil.cpp  JsonUtil.hpp  LoadFile.cpp  LoadFile.hpp  MemoryPool.hpp  StringUtil.cpp  StringUtil.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.hpp
test/assets/fabricskyboxes/sky/: press_f12_to_hide_this_text.json  sky0_overworld.json  sky1_stars.json  sky2_day.json  sky3_night.json  sky4_sunset.json  sky5_sunrise.json  sky6_sunflare_sunset.json  sky7_sunflare_sunrise.json  sky8_sunmoon.json
test/assets/minecraft/mcpatcher/sky/world0/: sky3.properties  sky5.properties  sky6.properties  sky7.properties
test/assets/minecraft/optifine/sky/world0/: sky1.properties  sky2.properties  sky4.properties
test/assets/minecraft/texts/: splashes.txt
